# ClusteredDeferredRenderer

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
include/: camera.h
include/glad/: glad.h
shaders/: geometry.frag  geometry.vert  lighting.frag  render.frag  render.vert
src/: Application.cpp  Application.h  CameraController.cpp  CameraController.h  DeferredRenderer.cpp  DeferredRenderer.h  ModelLoader.cpp  ModelLoader.h  Scene.cpp  Scene.h  WindowCallbacks.cpp  WindowCallbacks.h  camera.h  glad.c  main.cpp  shader.h
